@@ -32,7 +32,8 @@ New Keywords:
 - add_input_text:               Added "tab_input" keyword
 
 Fixes:
-- delete_row:   fixed issue where row 0 couldn't be deleted #421
+- delete_row:     fixed issue where row 0 couldn't be deleted #421
+- get_item_label: fixed issue where internal label was returned #428
 
 ------------------------------------------------------------------------
  VERSION 0.6.117
